--- a/default.html
+++ b/default.html
@@ -1,87 +1,172 @@
 <?php include 'head.php';?>
-
- <body>
-
-   <?php include 'header.php';?>
-
-<!-- once video added to header, hero will go here -->
-
-   <?php include 'about.php';?>
-
-<!-- feature here -->
-
-   <?php include 'skills.php';?>
-
-   <?php include 'escherquote.php';?>
-
-   <?php include 'projects.php';?>
-
-<!--  personal.php will go here  -->
-
-   <?php include 'footer.php';?>
-
-
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://www.materializecss.com/bin/materialize.js"></script>
-    <script src="http://www.materializecss.com/js/init.js"></script>
-    <script src="app.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-92421534-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script>
-      function init() {
-        window.addEventListener('scroll', function(e){
-          var distanceY = window.pageYOffset || document.documentElement.scrollTop,
-            shrinkOn = 100,
-            header = document.querySelector("header");
-          if (distanceY > shrinkOn) {
-          classie.add(header,"smaller");
+<body>
+  <?php include 'header.php';?>
+  <?php include 'jumbotron.php';?>
+  <a href="#about" class="btn-floating btn-large waves-effect waves-light red" id="scroll"><i class="material-icons">keyboard_arrow_down</i></a>
+  <?php include 'fcbcard.php';?>
+  <?php include 'about.php';?>
+  <?php include 'education.php';?>
+  <?php include 'projects.php';?>
+  <?php include 'quote.php';?>
+  <?php include 'skills.php';?>
+  <?php include 'quote2.php';?>
+  <!--  personal.php will go here  -->
+  <?php include 'footer.php';?>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+  <!--  from Materialize for parallax etc -->
+  <script src="https://www.franklinchristopherbrooks.com/init.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  <script src="script.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-92421534-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script>
+    function init() {
+      window.addEventListener('scroll', function(e){
+        var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+          shrinkOn = 100,
+          header = document.querySelector("header");
+        if (distanceY > shrinkOn) {
+        classie.add(header,"smaller");
+        }
+        else {
+          if (classie.has(header,"smaller")) {
+              classie.remove(header,"smaller");
           }
-          else {
-            if (classie.has(header,"smaller")) {
-                classie.remove(header,"smaller");
-            }
-          }
-        });
-      }
-      window.onload = init();
-    </script>
-    <script>
-      var options = [
+        }
+      });
+    }
+    window.onload = init();
+  </script>
+  <script>
+    var options = [
 
-/*
+    /*
 
-      {selector: '#staggered-test', offset: 150, callback: function(el) {
-        Materialize.toast("Thanks for scrolling this far!", 1500 );
-      } },
-      {selector: '#staggered-test', offset: 205, callback: function(el) {
-        Materialize.toast("Please continue scrolling!", 1500 );
-      } },
-      {selector: '#image-test', offset: 500, callback: function(el) {
-        Materialize.fadeInImage($(el));
-      } },
+    {selector: '#staggered-test', offset: 150, callback: function(el) {
+      Materialize.toast("Thanks for scrolling this far!", 1500 );
+    } },
+    {selector: '#staggered-test', offset: 205, callback: function(el) {
+      Materialize.toast("Please continue scrolling!", 1500 );
+    } },
+    {selector: '#image-test', offset: 500, callback: function(el) {
+      Materialize.fadeInImage($(el));
+    } },
 
-*/
+    */
 
-      {selector: '#staggered-test', offset: 100, callback: function(el) {
-        Materialize.showStaggeredList($(el));
-      } },
-      {selector: '#staggered-test-2', offset: 125, callback: function(el) {
-        Materialize.showStaggeredList($(el));
-      } },
-      {selector: '#staggered-test-3', offset: 150, callback: function(el) {
-        Materialize.showStaggeredList($(el));
-      } }
+    {selector: '#staggered-test', offset: 100, callback: function(el) {
+      Materialize.showStaggeredList($(el));
+    } },
+    {selector: '#staggered-test-2', offset: 125, callback: function(el) {
+      Materialize.showStaggeredList($(el));
+    } },
+    {selector: '#staggered-test-3', offset: 150, callback: function(el) {
+      Materialize.showStaggeredList($(el));
+    } }
 
     ];
     Materialize.scrollFire(options);
 
-    </script>
-  </body>
+  </script>
+  <script>
+    smoothScroll.init({
+            speed: 750,
+      selectorHeader: '[data-scroll-header]'
+    });
+  </script>
+  <script>
+    gumshoe.init({
+      selector: '[data-gumshoe] a', // Default link selector (must use a valid CSS selector)
+      selectorHeader: '[data-gumshoe-header]', // Fixed header selector (must use a valid CSS selector)
+      container: window, // The element to spy on scrolling in (must be a valid DOM Node)
+      offset: 0, // Distance in pixels to offset calculations
+      activeClass: 'active', // Class to apply to active navigation link and its parent list item
+      scrollDelay: false, // Wait until scrolling has stopped before updating the navigation
+      callback: function (nav) {} // Callback to run after setting active link
+    });
+  </script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script>
+    /*
+    from https://github.com/jlmakes/scrollreveal
+    */
+        window.sr = ScrollReveal({
+          // 'bottom', 'left', 'top', 'right'
+          origin: 'bottom',
+
+          // Can be any valid CSS distance, e.g. '5rem', '10%', '20vw', etc.
+          distance: '200px',
+
+          // Time in milliseconds.
+          duration: 500,
+          delay: 500,
+
+          // Starting angles in degrees, will transition from these values to 0 in all axes.
+          rotate: { x: 0, y: 0, z: 0 },
+
+          // Starting opacity value, before transitioning to the computed opacity.
+          opacity: 0,
+
+          // Starting scale value, will transition from this value to 1
+          scale: 0.9,
+
+          // Accepts any valid CSS easing, e.g. 'ease', 'ease-in-out', 'linear', etc.
+          easing: 'cubic-bezier(0.6, 0.2, 0.1, 1)',
+
+          // `<html>` is the default reveal container. You can pass either:
+          // DOM Node, e.g. document.querySelector('.fooContainer')
+          // Selector, e.g. '.fooContainer'
+          container: window.document.documentElement,
+
+          // true/false to control reveal animations on mobile.
+          mobile: true,
+
+          // true:  reveals occur every time elements become visible
+          // false: reveals occur once as elements become visible
+          reset: false,
+
+          // 'always' — delay for all reveal animations
+          // 'once'   — delay only the first time reveals occur
+          // 'onload' - delay only for animations triggered by first load
+          useDelay: 'once'
+
+        });
+        sr.reveal('.foo');
+        sr.reveal('.social-icon', { duration: 500 }, 50);
+        sr.reveal('.grid', { duration: 900 }, 150);
+  </script>
+  <script>
+    $('.button-collapse').sideNav({
+          menuWidth: 300, // Default is 300
+          edge: 'left', // Choose the horizontal origin
+          closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+
+      }
+    );
+  </script>
+  <script>
+    $( document ).ready(function(){
+       $(".button-collapse").sideNav();
+       $('.slider').slider({full_width: true});
+    });
+
+  </script>
+
+<script>
+let myTextSplitr = new TextSplitr(document.getElementById("split"), {type: "chars"});
+TweenLite.set("#split", {perspective:400});
+TweenMax.staggerFrom(myTextSplitr.chars, 0.5, {opacity:0, rotation:-100, y:-100, ease:Back.easeOut}, 0.1);
+
+</script>
+
+</body>
 </html>
